[CHANGE] migration site url

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: Office Boy Toko Sebelah
+title: Mashanz | The Noob Software Engineer
 show_title: true
 articles:
   excerpt_type: html
