[ADD] style across the pages

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@ articles:
 header:
   theme: dark
   background: 'linear-gradient(135deg, rgb(251, 176, 59), rgb(41, 171, 226))'
+footer:
+  theme: dark
+  background: 'linear-gradient(135deg, rgb(251, 176, 59), rgb(41, 171, 226))'
 article_header:
   type: overlay
   height: 95vh
