[CHANGE] image as webp

--- a/index.html
+++ b/index.html
@@ -19,5 +19,5 @@ article_header:
   background_color: '#203028'
   background_image:
     gradient: 'linear-gradient(135deg, rgba(251, 139, 59, .4), rgba(41, 171, 226, .4))'
-    src: /assets/bg-0.jpg
+    src: /assets/bg_cover.webp
 ---
