--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container-fluid pt-3">
         <img class="img-thumbnail mx-auto d-block" src="https://avatars.githubusercontent.com/u/9214059?v=4" alt="Hanjara Cahya Adhyatma" style="max-width: 200px; max-height: 200px;">
         <span class="text-warning text-center d-block m-2" style="font-size: small;">@mashanz</span>
-        <a href="https://academy.mashanz.com/" target="_blank" class="btn btn-outline-warning mx-auto d-block m-2" style="max-width: 300px;"><i class="bi-laptop"></i> FastTrack Academy</a>
+        <a href="https://fastrack.mashanz.com/" target="_blank" class="btn btn-outline-warning mx-auto d-block m-2" style="max-width: 300px;"><i class="bi-laptop"></i> FastTrack Academy</a>
         <a href="https://github.com/mashanz/" target="_blank" class="btn btn-outline-warning mx-auto d-block m-2" style="max-width: 300px;"><i class="bi-github"></i> GitHub</a>
         <a href="mailto:hanjara@centragro.org/" target="_blank" class="btn btn-outline-warning mx-auto d-block m-2" style="max-width: 300px;"><i class="bi-envelope"></i> Mail</a>
     </div>
