--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <span class="text-warning text-center d-block m-2" style="font-size: small;">@mashanz</span>
         <a href="https://fastrack.mashanz.com/" target="_blank" class="btn btn-outline-warning mx-auto d-block m-2" style="max-width: 300px;"><i class="bi-laptop"></i> FastTrack Academy</a>
         <a href="https://github.com/mashanz/" target="_blank" class="btn btn-outline-warning mx-auto d-block m-2" style="max-width: 300px;"><i class="bi-github"></i> GitHub</a>
+        <a href="https://twitter.com/papanberjalan" target="_blank" class="btn btn-outline-warning mx-auto d-block m-2" style="max-width: 300px;"><i class="bi-twitter"></i> Twitter</a>
         <a href="mailto:hanjara@centragro.org/" target="_blank" class="btn btn-outline-warning mx-auto d-block m-2" style="max-width: 300px;"><i class="bi-envelope"></i> Mail</a>
     </div>
 
