--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="container-fluid pt-3">
         <img class="img-thumbnail mx-auto d-block" src="https://avatars.githubusercontent.com/u/9214059?v=4" alt="Hanjara Cahya Adhyatma" style="max-width: 200px; max-height: 200px;">
         <span class="text-warning text-center d-block m-2" style="font-size: small;">@mashanz</span>
+        <a href="https://www.youtube.com/channel/UCoEEOSnEpEIVA8MNz4PxGog" target="_blank" class="btn btn-outline-warning mx-auto d-block m-2" style="max-width: 300px;"><i class="bi-youtube"></i> YouTube</a>
         <a href="https://fastrack.mashanz.com/" target="_blank" class="btn btn-outline-warning mx-auto d-block m-2" style="max-width: 300px;"><i class="bi-laptop"></i> FastTrack Academy</a>
         <a href="https://github.com/mashanz/" target="_blank" class="btn btn-outline-warning mx-auto d-block m-2" style="max-width: 300px;"><i class="bi-github"></i> GitHub</a>
         <a href="https://twitter.com/papanberjalan" target="_blank" class="btn btn-outline-warning mx-auto d-block m-2" style="max-width: 300px;"><i class="bi-twitter"></i> Twitter</a>
