--- a/index.html
+++ b/index.html
@@ -11,19 +11,20 @@
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 </head>
-<body class="bg-dark">
+<body class="bg-dark vh-100">
 
     <div class="container-fluid pt-3">
         <img class="img-thumbnail mx-auto d-block" src="https://avatars.githubusercontent.com/u/9214059?v=4" alt="Hanjara Cahya Adhyatma" style="max-width: 200px; max-height: 200px;">
         <span class="text-warning text-center d-block m-2" style="font-size: small;">@mashanz</span>
+        <a href="/inquiry.html" target="_blank" class="btn btn-outline-warning mx-auto d-block m-2" style="max-width: 300px;"><i class=" bi-bag"></i> Inquiry</a>
         <a href="https://www.youtube.com/channel/UCoEEOSnEpEIVA8MNz4PxGog" target="_blank" class="btn btn-outline-warning mx-auto d-block m-2" style="max-width: 300px;"><i class="bi-youtube"></i> YouTube</a>
-        <a href="https://fastrack.mashanz.com/" target="_blank" class="btn btn-outline-warning mx-auto d-block m-2" style="max-width: 300px;"><i class="bi-laptop"></i> FastTrack Academy</a>
         <a href="https://github.com/mashanz/" target="_blank" class="btn btn-outline-warning mx-auto d-block m-2" style="max-width: 300px;"><i class="bi-github"></i> GitHub</a>
         <a href="https://twitter.com/papanberjalan" target="_blank" class="btn btn-outline-warning mx-auto d-block m-2" style="max-width: 300px;"><i class="bi-twitter"></i> Twitter</a>
         <a href="mailto:hanjara@centragro.org/" target="_blank" class="btn btn-outline-warning mx-auto d-block m-2" style="max-width: 300px;"><i class="bi-envelope"></i> Mail</a>
+        <a href="https://fastrack.mashanz.com/" target="_blank" class="btn btn-outline-warning mx-auto d-block m-2" style="max-width: 300px;"><i class="bi-laptop"></i> Fastrack</a>
     </div>
 
-    <span class="text-muted text-center d-block" style="font-size: small;">&copy; 2021 Mashanz</span>
+    <span class="my-3 text-muted text-center d-block" style="font-size: small;">&copy; 2021 Mashanz</span>
     
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
