[UPD] CV and profiles

--- a/cv.html
+++ b/cv.html
@@ -14,23 +14,41 @@
     <style>
 
     span {
-        background-color: #6c757d;
-        color:white;
+        background-color: #e6eaee;
+        color: #0d6efd;
+        font-weight: bold;
         padding-left: 8px;
         padding-right: 8px;
         padding-top: 4px;
         padding-bottom: 4px;
-        font-size: small;
-        opacity: 50%;
-        margin-top: 2px;
+        font-size: xx-small;
+        margin-top: 3px;
+        margin-inline: -1px;
+        display: inline-block;
+        border-radius: 25px;
+    }
+
+    @media print {
+        tr td {
+            font-size: x-small;
+        }
+        body {
+            font-size: small;
+        }
+        b {
+            font-size: x-small;
+        }
+        .row.g-3 div.col div.card div.card-body{
+            padding: 4px;
+        }
     }
 
     </style>
 </head>
-<body class="bg-light">
+<body>
     
     <div class="my-3 container card p-0">
-        <table class="m-0 table">
+        <table class="m-0 table bg-light">
             <tr>
                 <th colspan="2" class="h3 text-center">HANJARA CAHYA ADHYATMA</th>
             </tr>
@@ -58,11 +76,23 @@
     </div>
 
     <div class="my-3 container p-0 text-center">
-        <div class="row">
-            <div class="col"><div class="card"><div class="card-body"><i class=" bi-github"></i> <a href="https://github.com/mashanz" target="_blank">github.com/mashanz</a></div></div></div>
-            <div class="col"><div class="card"><div class="card-body"><i class=" bi-linkedin"></i> <a href="https://linkedin.com/in/mashanz" target="_blank">linkedin.com/in/mashanz</a></div></div></div>
-            <div class="col"><div class="card"><div class="card-body"><i class=" bi-mailbox"></i> <a href="mailto:hanjara@centragro.org" target="_blank">hanjara@centragro.org</a></div></div></div>
-            <div class="col"><div class="card"><div class="card-body"><i class=" bi-globe2"></i> <a href="https://mashanz.com" target="_blank">mashanz.com</a></div></div></div>
+        <div class="row g-3">
+            <div class="col"><div class="card"><div class="card-body"><a href="https://github.com/mashanz" target="_blank">
+                <i class="h2 bi-github"></i><br/>
+                <b>github.com/mashanz</b>
+            </a></div></div></div>
+            <div class="col"><div class="card"><div class="card-body"><a href="https://linkedin.com/in/mashanz" target="_blank">
+                <i class="h2 bi-linkedin"></i><br/>
+                <b>linkedin.com/in/mashanz</b>
+            </a></div></div></div>
+            <div class="col"><div class="card"><div class="card-body"><a href="mailto:hanjara@centragro.org" target="_blank">
+                <i class="h2 bi-mailbox"></i><br/>
+                <b>hanjara@centragro.org</b>
+            </a></div></div></div>
+            <div class="col"><div class="card"><div class="card-body"><a href="https://mashanz.com" target="_blank">
+                <i class="h2 bi-globe2"></i><br/>
+                <b>mashanz.com</b>
+            </a></div></div></div>
         </div>
     </div>
 
@@ -79,7 +109,7 @@
                 <tr class="bg-light fw-bold">
                     <td>Apr 2020 - Now</td>
                     <td>Odoo Developer (Remote)</td>
-                    <td>Singapore (SG)</td>
+                    <td>Singapore (SG) 🇸🇬</td>
                     <td>Anergy Pte Ltd</td>
                 </tr>
                 <tr>
@@ -108,7 +138,7 @@
                 <tr class="bg-light fw-bold">
                     <td>Nov 2019 - Now</td>
                     <td>Founder & Engineer (Remote)</td>
-                    <td>Pandeglang (ID)</td>
+                    <td>Pandeglang (ID) 🇮🇩</td>
                     <td>Grow Stack Farm</td>
                 </tr>
                 <tr>
@@ -134,7 +164,7 @@
                 <tr class="bg-light fw-bold">
                     <td>Jan 2019 - Des 2019</td>
                     <td>Software Engineer (Remote)</td>
-                    <td>Jambi (ID)</td>
+                    <td>Jambi (ID) 🇮🇩</td>
                     <td>Guild Indonesia</td>
                 </tr>
                 <tr>
@@ -169,7 +199,7 @@
                 <tr class="bg-light fw-bold">
                     <td>Mar 2019 - Mei 2019</td>
                     <td>Game Developer Instructor</td>
-                    <td>Bekasi (ID)</td>
+                    <td>Bekasi (ID) 🇮🇩</td>
                     <td>Ministry of Manpower of the Republic of Indonesia</td>
                 </tr>
                 <tr>
@@ -195,7 +225,7 @@
                 <tr class="bg-light fw-bold">
                     <td>Mei 2018 - Nov 2018</td>
                     <td>Embedded Engineer</td>
-                    <td>Bandung (ID)</td>
+                    <td>Bandung (ID) 🇮🇩</td>
                     <td>Vrumen Laboratory</td>
                 </tr>
                 <tr>
@@ -224,7 +254,7 @@
                 <tr class="bg-light fw-bold">
                     <td>Jul 2017 - Aug 2017</td>
                     <td>IoT Engineer</td>
-                    <td>Kanagawa (JP)</td>
+                    <td>Kanagawa (JP) 🇯🇵</td>
                     <td>Fujitsu Japan</td>
                 </tr>
                 <tr>
@@ -246,7 +276,7 @@
                 <tr class="bg-light fw-bold">
                     <td>Jul 2016 - Aug 2016</td>
                     <td>Full Stack Engineer</td>
-                    <td>Bandung (ID)</td>
+                    <td>Bandung (ID) 🇮🇩</td>
                     <td>PT Telekomunikasi Indonesia</td>
                 </tr>
                 <tr>
@@ -272,7 +302,7 @@
                 <tr class="bg-light fw-bold">
                     <td>Jul 2015 - Aug 2015</td>
                     <td>Internship</td>
-                    <td>Bandung (ID)</td>
+                    <td>Bandung (ID) 🇮🇩</td>
                     <td>PT INTI</td>
                 </tr>
                 <tr>
@@ -292,13 +322,18 @@
                 <tr class="bg-light fw-bold">
                     <td>Jul 2013 - Aug 2017</td>
                     <td>Laboratory Research Student</td>
-                    <td>Bandung (ID)</td>
+                    <td>Bandung (ID) 🇮🇩</td>
                     <td>Telkom University</td>
                 </tr>
                 <tr>
                     <td colspan="4" class="text-start">
                         <ul class="m-0">
-                            <li>...</li>
+                            <li>Build Manipulator ARM Robot</li>
+                            <li>Build Line Follower Robot</li>
+                            <li>Build Humanoid Robo Soccer</li>
+                            <li>Build CCTV Web Camera monitoring</li>
+                            <li>Design 8 bit Microprocessor</li>
+                            <li>Design 4 bit Memory</li>
                         </ul>
                     </td>
                 </tr>
@@ -306,24 +341,29 @@
                     <td colspan="4" class="text-start">
                         <span>C/C++</span>
                         <span>Python</span>
+                        <span>JavaScript</span>
                         <span>Arduino</span>
                         <span>Raspberry Pi</span>
                         <span>Atmel Microcontroller</span>
                         <span>STM32 Microprocessor</span>
-
+                        <span>Blender</span>
+                        <span>Unity 3D</span>
+                        <span>VLSI</span>
+                        <span>VERILOG</span>
                     </td>
                 </tr>
 
                 <tr class="bg-light fw-bold">
                     <td>Jul 2010 - Aug 2013</td>
                     <td>Computer Club Committee</td>
-                    <td>Pandeglang (ID)</td>
+                    <td>Pandeglang (ID) 🇮🇩</td>
                     <td>Pandeglang 1 High School</td>
                 </tr>
                 <tr>
                     <td colspan="4" class="text-start">
                         <ul class="m-0">
-                            <li>...</li>
+                            <li>Build Signature Handcrafted CMS</li>
+                            <li>Build High School Club Registration App</li>
                         </ul>
                     </td>
                 </tr>
@@ -342,13 +382,15 @@
                 <tr class="bg-light fw-bold">
                     <td>Jul 2006 - Aug 2010</td>
                     <td>Coder as Hoby</td>
-                    <td>Pandeglang (ID)</td>
+                    <td>Pandeglang (ID) 🇮🇩</td>
                     <td>Self Taught</td>
                 </tr>
                 <tr>
                     <td colspan="4" class="text-start">
                         <ul class="m-0">
-                            <li>...</li>
+                            <li>Learn How to Code Website</li>
+                            <li>Build Simple CLI Game</li>
+                            <li>Build GUI Calculator</li>
                         </ul>
                     </td>
                 </tr>
