--- a/index.html
+++ b/index.html
@@ -16,18 +16,22 @@
     <div class="container-fluid pt-3">
         <img class="img-thumbnail mx-auto d-block" src="https://avatars.githubusercontent.com/u/9214059?v=4" alt="Hanjara Cahya Adhyatma" style="max-width: 200px; max-height: 200px;">
         <span class="text-warning text-center d-block m-2" style="font-size: small;">@mashanz</span>
-        <a href="/inquiry" target="_blank" class="btn btn-outline-warning mx-auto d-block m-2" style="max-width: 300px;"><i class=" bi-bag"></i> Inquiry</a>
-        <a href="https://www.youtube.com/channel/UCoEEOSnEpEIVA8MNz4PxGog" target="_blank" class="btn btn-outline-warning mx-auto d-block m-2" style="max-width: 300px;"><i class="bi-youtube"></i> YouTube</a>
-        <a href="https://github.com/mashanz/" target="_blank" class="btn btn-outline-warning mx-auto d-block m-2" style="max-width: 300px;"><i class="bi-github"></i> GitHub</a>
-        <a href="https://twitter.com/papanberjalan" target="_blank" class="btn btn-outline-warning mx-auto d-block m-2" style="max-width: 300px;"><i class="bi-twitter"></i> Twitter</a>
-        <a href="mailto:hanjara@centragro.org/" target="_blank" class="btn btn-outline-warning mx-auto d-block m-2" style="max-width: 300px;"><i class="bi-envelope"></i> Mail</a>
-        <a href="https://fastrack.mashanz.com/" target="_blank" class="btn btn-outline-warning mx-auto d-block m-2" style="max-width: 300px;"><i class="bi-laptop"></i> Fastrack</a>
-        <a href="/cv" target="_blank" class="btn btn-outline-warning mx-auto d-block m-2" style="max-width: 300px;"><i class="bi-newspaper"></i> Works</a>
+        <a href="/inquiry" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class=" bi-bag"></i> Inquiry</a>
+        <a href="https://www.youtube.com/channel/UCoEEOSnEpEIVA8MNz4PxGog" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-youtube"></i> YouTube</a>
+        <a href="https://github.com/mashanz/" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-github"></i> GitHub</a>
+        <a href="https://twitter.com/papanberjalan" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-twitter"></i> Twitter</a>
+        <a href="mailto:hanjara@centragro.org/" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-envelope"></i> Mail</a>
+        <a href="https://fastrack.mashanz.com/" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-laptop"></i> Fastrack</a>
+        <a href="/cv" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-newspaper"></i> Works</a>
     </div>
 
-    <span class="my-3 text-muted text-center d-block" style="font-size: small;">&copy; 2021 Mashanz</span>
+    <span class="my-3 text-muted text-center d-block" style="font-size: small;">&copy; <span id="year"></span> - PT Mashanz Sumber Terbuka</span>
     
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+
+    <script>
+        document.getElementById("year").innerHTML = new Date().getFullYear();
+    </script>
 </body>
 </html>
