--- a/inquiry.html
+++ b/inquiry.html
@@ -235,9 +235,13 @@
         </div>
     </div>
 
-    <span class="py-3 text-muted text-center d-block" style="font-size: small;">&copy; 2021 Mashanz</span>
+    <span class="py-3 text-muted text-center d-block" style="font-size: small;">&copy; <span id="year"></span> - PT Mashanz Sumber Terbuka</span>
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+
+    <script>
+        document.getElementById("year").innerHTML = new Date().getFullYear();
+    </script>
 </body>
 </html>
