--- a/cv.html
+++ b/cv.html
@@ -59,7 +59,7 @@
         <table class="m-0 table">
             <thead class="text-center">
                 <tr class="bg-light">
-                    <th>Year</th>
+                    <th>Graduate</th>
                     <th>Education Level</th>
                 </tr>
             </thead>
