[UPD] virtual name card

--- a/index.html
+++ b/index.html
@@ -13,20 +13,30 @@
 </head>
 <body class="bg-dark vh-100">
 
-    <div class="container-fluid pt-3">
+    <section class="container-fluid pt-3 text-center">
+        <div class="text-warning py-3 mb-4 h3 border-top border-bottom border-warning">VIRTUAL NAME CARD</div>
         <img class="img-thumbnail mx-auto d-block" src="https://avatars.githubusercontent.com/u/9214059?v=4" alt="Hanjara Cahya Adhyatma" style="max-width: 200px; max-height: 200px;">
         <span class="text-warning text-center d-block m-2" style="font-size: small;">@mashanz</span>
-        <a href="/inquiry" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class=" bi-bag"></i> Inquiry</a>
-        <a href="https://www.youtube.com/channel/UCoEEOSnEpEIVA8MNz4PxGog" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-youtube"></i> YouTube</a>
+        <p class="text-center text-white mx-auto" style="max-width: 500px;">
+            Hi 👋🏻 I'm Han.<br/> ⌨️ Software Engineer with 15+ years unrelated work experience.<br/> 🧬 Currently focusing on 💻 Fullstack Web Development and ⚙️ Enterpreneurship.
+        </p>
+        <a href="https://www.linkedin.com/in/mashanz/" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-linkedin"></i> LinkedIn</a>
         <a href="https://github.com/mashanz/" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-github"></i> GitHub</a>
         <a href="https://twitter.com/papanberjalan" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-twitter"></i> Twitter</a>
+        <a href="https://www.youtube.com/channel/UCoEEOSnEpEIVA8MNz4PxGog" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-youtube"></i> YouTube</a>
         <a href="mailto:hanjara@centragro.org/" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-envelope"></i> Mail</a>
-        <a href="https://fastrack.mashanz.com/" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-laptop"></i> Fastrack</a>
-        <a href="/cv" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-newspaper"></i> Works</a>
-    </div>
+        <a href="/cv" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-newspaper"></i> Resume</a>
+    </section>
 
-    <span class="my-3 text-muted text-center d-block" style="font-size: small;">&copy; <span id="year"></span> - PT Mashanz Sumber Terbuka</span>
-    
+    <section class="container-fluid pt-3 text-center">
+        <div class="text-warning py-3 mb-4 h3 border-top border-bottom border-warning">BUILD IN/FOR PUBLIC APPS</div>
+        <a href="https://fastrack.mashanz.com/" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-laptop"></i> Fastrack Academy</a>
+        <a href="https://github.com/mashanz/logbook-django" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-currency-dollar"></i> Expanse Tracker</a>
+        <a href="/inquiry" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class=" bi-bag"></i> On Deman Requests</a>
+    </section>
+
+    <footer class="py-3 text-muted text-center d-block" style="font-size: small;">&copy; <span id="year"></span> - PT Mashanz Sumber Terbuka</footer>
+
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 
