--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <title>Mashanz | Software Developer</title>
     <meta name="title" content="Mashanz | Software Developer">
     <meta name="description" content="Hi 👋🏻  I'm Han (Hanjara Cahya Adhyatma). ⌨️  Software Engineer with 15+ years unrelated work experience.
-    🧬  Currently focusing on 💻  Fullstack Web Development and ⚙️  Entrepreneurship. Jasa website murah, Jasa membuat website portofolio, Jasa membuat aplikasi android, Jasa kursus pemrograman, Jasa Kursus Ngoding. Pemrograman Web, Pemrograman Mobile, Pemrograman Android, Belajar Pemrograman Python, Belajar Django, Tutoril Django Indonesia, Tutorial Python Indonesia">
+    🧬  Currently focusing on 💻  Fullstack Web Development and ⚙️  Entrepreneurship">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://mashanz.com/">
     <meta property="og:title" content="Mashanz | Software Developer">
     <meta property="og:description" content="Hi 👋🏻  I'm Han (Hanjara Cahya Adhyatma). ⌨️  Software Engineer with 15+ years unrelated work experience.
-    🧬  Currently focusing on 💻  Fullstack Web Development and ⚙️  Entrepreneurship. Jasa website murah, Jasa membuat website portofolio, Jasa membuat aplikasi android, Jasa kursus pemrograman, Jasa Kursus Ngoding. Pemrograman Web, Pemrograman Mobile, Pemrograman Android, Belajar Pemrograman Python, Belajar Django, Tutoril Django Indonesia, Tutorial Python Indonesia">
+    🧬  Currently focusing on 💻  Fullstack Web Development and ⚙️  Entrepreneurship">
     <meta property="og:image" content="https://mashanz.com/img.png">
 
     <!-- Twitter -->
@@ -24,7 +24,7 @@
     <meta property="twitter:url" content="https://mashanz.com/">
     <meta property="twitter:title" content="Mashanz | Software Developer">
     <meta property="twitter:description" content="Hi 👋🏻  I'm Han (Hanjara Cahya Adhyatma). ⌨️  Software Engineer with 15+ years unrelated work experience.
-    🧬  Currently focusing on 💻  Fullstack Web Development and ⚙️  Entrepreneurship. Jasa website murah, Jasa membuat website portofolio, Jasa membuat aplikasi android, Jasa kursus pemrograman, Jasa Kursus Ngoding. Pemrograman Web, Pemrograman Mobile, Pemrograman Android, Belajar Pemrograman Python, Belajar Django, Tutoril Django Indonesia, Tutorial Python Indonesia">
+    🧬  Currently focusing on 💻  Fullstack Web Development and ⚙️  Entrepreneurship">
     <meta property="twitter:image" content="https://mashanz.com/img.png">
 
     <!-- Bootstrap -->
@@ -39,7 +39,7 @@
         <img class="img-thumbnail mx-auto d-block" src="https://avatars.githubusercontent.com/u/9214059?v=4" alt="Hanjara Cahya Adhyatma" style="max-width: 200px; max-height: 200px;">
         <span class="text-warning text-center d-block m-2" style="font-size: small;">@mashanz</span>
         <p class="text-center text-white mx-auto" style="max-width: 500px;">
-            Hi 👋🏻 I'm Han.<br/> ⌨️ Software Engineer with 15+ years unrelated work experience.<br/> 🧬 Currently focusing on 💻 Fullstack Web Development and ⚙️ Entrepreneurship.
+            Hi 👋🏻 I'm Han.<br/> ⌨️ Coder since 2006 and still learning.<br/> 🧬 Currently focusing on 💻 Fullstack Web Development and ⚙️ Entrepreneurship.
         </p>
         <a href="https://www.linkedin.com/in/mashanz/" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-linkedin"></i> LinkedIn</a>
         <a href="https://github.com/mashanz/" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-github"></i> GitHub</a>
