--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <p class="text-center text-white mx-auto" style="max-width: 500px;">
             Hi 👋🏻 I'm Han.<br/> ⌨️ Coder since 2006 and still learning.<br/> 🧬 Currently focusing on 💻 Fullstack Web Development and ⚙️ Entrepreneurship.
         </p>
-        <a href="https://mashanz/note/" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-journal-code"></i> Blog Post</a>
+        <a href="https://mashanz.com/note/" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-journal-code"></i> Blog Post</a>
         <a href="https://www.linkedin.com/in/mashanz/" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-linkedin"></i> LinkedIn</a>
         <a href="https://github.com/mashanz/" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-github"></i> GitHub</a>
         <a href="https://twitter.com/papanberjalan" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-twitter"></i> Twitter</a>
