--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <a href="https://twitter.com/papanberjalan" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-twitter"></i> Twitter</a>
         <a href="https://www.youtube.com/channel/UCoEEOSnEpEIVA8MNz4PxGog" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-youtube"></i> YouTube</a>
         <a href="mailto:hanjara@centragro.org/" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-envelope"></i> Mail</a>
-        <a href="/cv" target="_blank" class="btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-newspaper"></i> Resume</a>
+        <a href="/cv" target="_blank" class="d-none btn btn-lg btn-outline-warning mx-auto d-block m-2" style="max-width: 500px;"><i class="bi-newspaper"></i> Resume</a>
     </section>
 
     <section class="container-fluid pt-3 text-center">
