--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <!-- Primary Meta Tags -->
     <title>Mashanz | Software Developer</title>
     <meta name="title" content="Mashanz | Software Developer">
-    <meta name="description" content="Hi 👋🏻  I'm Han (Hanjara Cahya Adhyatma). ⌨️  Software Engineer with 15+ years unrelated work experience.
+    <meta name="description" content="Hi 👋🏻  I'm Han (Hanjara). ⌨️  Software Engineer with 15+ years unrelated work experience.
     🧬  Currently focusing on 💻  Fullstack Web Development and ⚙️  Entrepreneurship">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://mashanz.com/">
     <meta property="og:title" content="Mashanz | Software Developer">
-    <meta property="og:description" content="Hi 👋🏻  I'm Han (Hanjara Cahya Adhyatma). ⌨️  Software Engineer with 15+ years unrelated work experience.
+    <meta property="og:description" content="Hi 👋🏻  I'm Han (Hanjara). ⌨️  Software Engineer with 15+ years unrelated work experience.
     🧬  Currently focusing on 💻  Fullstack Web Development and ⚙️  Entrepreneurship">
     <meta property="og:image" content="https://mashanz.com/img.png">
 
@@ -24,7 +24,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://mashanz.com/">
     <meta property="twitter:title" content="Mashanz | Software Developer">
-    <meta property="twitter:description" content="Hi 👋🏻  I'm Han (Hanjara Cahya Adhyatma). ⌨️  Software Engineer with 15+ years unrelated work experience.
+    <meta property="twitter:description" content="Hi 👋🏻  I'm Han (Hanjara). ⌨️  Software Engineer with 15+ years unrelated work experience.
     🧬  Currently focusing on 💻  Fullstack Web Development and ⚙️  Entrepreneurship">
     <meta property="twitter:image" content="https://mashanz.com/img.png">
 
@@ -37,7 +37,7 @@
 
     <section class="container-fluid pt-3 text-center">
         <div class="text-warning py-3 mb-4 h3 border-top border-bottom border-warning">VIRTUAL NAME CARD</div>
-        <img class="img-thumbnail mx-auto d-block" src="https://avatars.githubusercontent.com/u/9214059?v=4" alt="Hanjara Cahya Adhyatma" style="max-width: 200px; max-height: 200px;">
+        <img class="img-thumbnail mx-auto d-block" src="https://avatars.githubusercontent.com/u/9214059?v=4" alt="Hanjara" style="max-width: 200px; max-height: 200px;">
         <span class="text-warning text-center d-block m-2" style="font-size: small;">@mashanz</span>
         <p class="text-center text-white mx-auto" style="max-width: 500px;">
             Hi 👋🏻 I'm Han.<br/> ⌨️ Coder since 2006 and still learning.<br/> 🧬 Currently focusing on 💻 Fullstack Web Development and ⚙️ Entrepreneurship.
